Revert "Update home_timeline.html"
This reverts commit 6df14af2e1897340319ca17e657b711d075ca193.

--- a/DjangoProject/PostIT/page3/templates/home_timeline.html
+++ b/DjangoProject/PostIT/page3/templates/home_timeline.html
@@ -46,7 +46,7 @@ Page3 Homepage
                                             {% endfor %}
                                             {{post.author}} | {{ post.post_date }}   
                                         </section>
-                                        <a class="post-title" onclick="storeScroll()" href="{% url 'post-page' post.pk %}"> </a>|
+                                        <a class="post-title" onclick="storeScroll()" href="{% url 'post-page' post.pk %}">{{ post.title }} </a>|
                                         <a class="post-category" href="{% url 'posts-by-category' post.tags %}">{{ post.category}}</a> <small>
                                             {{post.id}}</small>
                                         <br />
