--- a/DjangoProject/PostIT/static/PostIT/css/customStyles.css
+++ b/DjangoProject/PostIT/static/PostIT/css/customStyles.css
@@ -191,12 +191,17 @@ p::-webkit-scrollbar{
     font-size: x-large;
     color: white;
 }
+
+.post-category-section{
+    display: flex;
+}
 .post .post-category{
     text-decoration: none;
     background-color: var(--primary_color);
     color: black;
     padding: 2px 5px; 
     border-radius: 2px;
+    font-size: small;
 }
 
 .post-video{
@@ -219,8 +224,27 @@ p::-webkit-scrollbar{
 .post-top-part{
     display: flex;
     align-items: center;
-    
+    margin-top: 10px;
 }
+
+.post-top-part .author-date{
+    display: flex;
+    flex-direction: column;
+    font-size: larger;
+}
+.post-top-part .author-date .date{
+    font-size: small;
+    color: var(--grey_color)
+}
+
+
+
+
+
+
+
+
+
 .page-contents{
     /* position: absolute; */
     display: flex;
@@ -228,6 +252,7 @@ p::-webkit-scrollbar{
     margin: 0 auto;
 
 }
+
 .sidebar{
     
     display: flex;
@@ -244,6 +269,32 @@ p::-webkit-scrollbar{
     left: 1100px;
     z-index: 990;
 }
-h1::-webkit-scrollbar{
+.sidebar .article{
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    border: 1px solid var(--grey_color);
+    border-radius: 5px;
+    margin: 5px 0;
+}
+.sidebar .article-category{
+    text-align: start;
+    width: 100%;
+    color: var(--grey_color);
+    font-size: larger;
+    padding-bottom: 5px;
+    border-bottom: 1px solid var(--grey_color);
+    margin: 5px;
+    overflow: hidden;
+}
+.article::-webkit-scrollbar{
+    display: none;
+}
+.sidebar .article p{
+    padding: 10px 0;
+    text-align: start;
+}
+h2::-webkit-scrollbar{
     display: none;
 }
