--- a/PostIT/page3/templates/posts_by_user.html
+++ b/PostIT/page3/templates/posts_by_user.html
@@ -5,32 +5,71 @@ Page3 Homepage
 
 {% block content %}
 
+<div class="main-body">
+    <br />
+    
+    {% if posts %}
+    <div class="page-contents">
+        <div class="sidebar">
+            <div class="logged_in_user">{{user.username}}</div>
+            <div class="user_page_profile_pic"><img src="/media/{{profile.profile_pic}}" /></div>
+            <h1>This is the profilepage of</h1>
+            <h1 class="user_name">{{profile_owner.username}}</h1>
+            <div class="followers">Followers{{profile.followers.count}}</div>
+            <div class="followers">Following{{profile.following.count}}</div>
+            <button class="follow_btn" >Follow</button>
+        </div>  
+        <div class="posts-timeline">
+            <ul>
+                {% for post in posts %}
 
-<h1>Page3 Homepage</h1><br />
-{% if posts %}
-<h1>{{ cat }}</h1>
-<ul>
-    {% for post in posts %}
+                <li class="post">
+                    <div>
+                        <div class="profile-pic">
+                            <a href="{%url 'posts-by-user' post.author%}"><img src="/media/{{profile.profile_pic}}" width="500"></a>
+                        </div>
+                        <a href="{% url 'post-page' post.pk %}">{{ post.title }} </a>| {{ post.author }} | {{ post.post_date }} |
+                        <a href="{% url 'posts-by-category' post.category %}">{{ post.category }}</a>
+                        <br />
+                        {% if user.is_authenticated %}
+                        {% if user.id == post.author.id %}
+                        <a href="{% url 'edit-post' post.pk %}">Edit</a>
+                        <a href="{% url 'delete-post' post.pk %}">Delete</a>
+                        {% endif %}
+                        {% endif %}
+                        <hr>
+                        {{ post.body|safe }}
+                    </div>
+                </li>
 
-    <li>
-        <div><a href="{% url 'post-page' post.pk %}">{{ post.title }} </a>| {{ post.author }} | {{ post.post_date }} |
-            <a href="{% url 'posts-by-category' post.category %}">{{ post.category }}</a>
-            <br />
-            {% if user.is_authenticated %}
-            {% if user.id == post.author.id %}
-            <a href="{% url 'edit-post' post.pk %}">Edit</a>
-            <a href="{% url 'delete-post' post.pk %}">Delete</a>
-            {% endif %}
-            {% endif %}
-            <hr>
-            {{ post.body|safe }}
-        </div>
-    </li><br /><br />
+                {% endfor %}
+            </ul>
+        </div> 
+    </div> 
+    {% else %}
+    <h2>Sorry, no posts found for category <i>{{ cat }}</i></h2>
+    {% endif %}
+</div>
+<script>
+    $(document).ready(function(){
 
-    {% endfor %}
-</ul>
+        $('.follow_btn').click(function(){
+            $.ajax({
+                type:'POST',
+                url: `/start_following/${$('.user_name').text()}`,
+                data:{
+                    'user': $('.logged_in_user').text(),
+                    // csrfmiddlewaretoken: $('input[name=csrfmiddlewaretoken]').val(),
+                    'csrfmiddlewaretoken': '{{ csrf_token }}',
+                },
+                success:function(response){
 
-{% else %}
-<h2>Sorry, no posts found for category <i>{{ cat }}</i></h2>
-{% endif %}
+                },
+                error: function(response){
+                    //alert("Error getting ranks and servers")
+                }
+            })
+        })
+    })
+</script>
 {% endblock content %}
