--- a/PostIT/static/PostIT/css/style.css
+++ b/PostIT/static/PostIT/css/style.css
@@ -170,6 +170,7 @@ i:hover {
 .main-body {
 
     background-color: var(--bg_color);
+    min-height: 100vh;;
     color: white;
     max-width: 100vw;
     text-align: center;
@@ -295,7 +296,7 @@ p::-webkit-scrollbar {
     display: flex;
     flex-direction: column;
     background-color: var(--post_bg_color);
-    height: 600px;
+    min-height: 600px;
     width: 300px;
     overflow: hidden;
     padding: 10px;
@@ -389,3 +390,16 @@ button{
     margin-top: 20px;
     display: flex;
 }
+
+
+/* User Posts Page */
+.user_page_profile_pic img{
+    width: 250px;
+    height: 250px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+.logged_in_user{
+    visibility: hidden;
+}
+/* User Posts Page */
