--- a/PostIT/page3/templates/add_post.html
+++ b/PostIT/page3/templates/add_post.html
@@ -10,7 +10,7 @@ Page3 - Add post
     {% csrf_token %}
     {{ form.media }}
     {{ form.as_p }}
-    <button type="submit">Post</button>
+    <button style="color:black" type="submit">Post</button>
 </form>
 
 
