--- a/PostIT/static/PostIT/css/style.css
+++ b/PostIT/static/PostIT/css/style.css
@@ -161,8 +161,13 @@ i:hover {
     left: 15%;
     bottom: 5px;
 }
-
-
+.navbar-contents .search-bar{
+    margin-left: auto;
+}
+.navbar-contents .search-bar input{
+    padding: 8px;
+    width: 300px;
+}
 
 
 
