--- a/PostIT/page3/templates/home_timeline.html
+++ b/PostIT/page3/templates/home_timeline.html
@@ -7,7 +7,7 @@ Page3 Homepage
 {% block content %}
 
 <div class="main-body">
-    <div id="myid">Replace me</div>
+    <div id="myid" style="visibility: hidden;">Replace me</div>
 
 
 
